Bug 98607 - Crash when opening a file by drag and drop
Summary: Crash when opening a file by drag and drop
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords: haveBacktrace, regression
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2016-03-11 18:51 UTC by Buovjaga
Modified: 2016-10-25 19:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace of the crash (16.92 KB, text/plain)
2016-03-11 18:51 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2016-03-11 18:51:40 UTC
Created attachment 123506 [details]
Backtrace of the crash

Drag any file to start center.
Crash.

5.2 built today.

64-bit, KDE Plasma 5
Version: 5.2.0.0.alpha0+
Build ID: 235411c9d47ecba88e46d859ea93bcecefb0c46e
CPU Threads: 8; OS Version: Linux 4.4; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Comment 1 raal 2016-03-11 21:00:33 UTC
I can confirm with Version: 5.2.0.0.alpha0+
Build ID: aaca25d67eb5ea252730cdcf555ecc04ce04a5e6
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-02-24_23:58:47

No crash wit 5.0.5.2, regression
Comment 2 Armin Le Grand (collabora) 2016-03-16 14:46:17 UTC
Just happened to me, too...
Comment 3 Maxim Monastirsky 2016-03-16 15:14:06 UTC
That's a regression of https://cgit.freedesktop.org/libreoffice/core/commit/?id=f2f1f52d8b84ac088496a4964d799bb84007fc45

There is inverted condition in DNDEventDispatcher::fireDropEvent.
Comment 4 Michael Meeks 2016-03-16 15:23:57 UTC
Thanks Maxim - good catch - let me fix that =)
Comment 5 Armin Le Grand (collabora) 2016-03-16 15:40:23 UTC
Crashes in Window::DecrementLockCount() where mpWindowImpl is NULL, but accessed. Looks like a task for the vcl digger
Comment 6 Armin Le Grand (collabora) 2016-03-16 15:43:01 UTC
When jumping over 'mpWindowImpl->mnLockCount--;' all works well.
Other Window:: methods already use pattern

    return mpWindowImpl ? mpWindowImpl->mnStyle : 0;

another case to use it?
Comment 7 Michael Meeks 2016-03-16 16:00:11 UTC
Armin: sounds good - we should at least not crash; but I'll add some asserts to those two methods - for some locking pair-up we shouldn't really mis the other part of the pair there I think; at least in debug mode.
Comment 8 Michael Meeks 2016-03-16 16:08:55 UTC
Fix pushed to gerrit; thanks =)

https://gerrit.libreoffice.org/23307 tdf#98607 - fix drag and drop regression.
Comment 9 Michael Meeks 2016-03-16 16:13:03 UTC
Doesn't affect -5-1 thankfully =)
Comment 10 Commit Notification 2016-03-16 17:20:19 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=652e8a2b37bded8afe73f8ee03bb6664443c7cab

tdf#98607 - fix drag and drop regression.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Daniël van Vuuren 2016-06-02 15:46:24 UTC
Fixed with 5.2.0.0.alpha1+