tdf#98607 - fix drag and drop regression.

regressed in: f2f1f52d8b84ac088496a4964d799bb84007fc45
    Added belt and braces fix.
    Thanks to Maxim for the bisect.

Change-Id: I5b263870d76f44ef8833b27f0d8d391210216459